			   XPCE ChangeLog
			   ==============


* FIXED: PceEmacs: handle exported operators in colouring.


VERSION 6.2.18, distributed with SWI-Prolog 5.3.10
==================================================

* ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
  handling for embedded applications on ELF-based systems.


VERSION 6.2.17, distributed with SWI-Prolog 5.3.9
=================================================

* ADDED: PceEmacs to determine mode from arbitrary patterns on the content.
  See emacs_content_mode/3 in library('emacs/emacs.pl').

* ADDED: CHR support in the cross-referencer and colours to the
  PceEmacs chr mode.

* FIXED: Bug#142: Buffer overflow on menus with > 1000 items.  Limit
  has been removed.  Holger Kanwischer.

* MODIFIED: class compiler operator issues to exploit the new
  library(operators).


VERSION 6.2.16, distributed with SWI-Prolog 5.3.7
=================================================

* FIXED: PceEmacs: make matching bracket highlighting work after
  text-modifying commands.

* FIXED: cross-referencer to handle #! script file.


VERSION 6.2.15, distributed with SWI-Prolog 5.3.6
=================================================

* ADDED: PceEmacs: Highlight of matching bracket in language mode. 
  Suggested by Maurizio Colucci.

* ENHANCED: make view->colour and editor->colour all set the foreground
  colour of the text.


VERSION 6.2.14, distributed with SWI-Prolog 5.3.3
=================================================

* INSTALL: Avoid accessing the X11 display when building the online
  manual index to facilitate building in environments that do not
  support X11.


VERSION 6.2.13, distributed with SWI-Prolog 5.2.13/5.3.2
========================================================

* FIXED: Avoid excessive amount amount of ->report: status, '' from
  keybinding (Laurens van der Meij).

* FIXED: Bug#113: ERROR: - ->initialise: Argument 1 (left): `expression'