@@ -2,6 +2,9 @@
 			   ==============
 
 
+* ENHANCED: Improve checking of arguments in pce_begin_class.  After
+  message from Joao Mariz.
+
 * FIXED: PceEmacs: handle exported operators in colouring.
 
 
